# ce-benchmark

./: .gitignore  ce-benchmark.py  output.json  pyproject.toml  readme.md  requirement.txt  requirements.txt
ce_benchmark/: __init__.py  cli.py  config.py  io.py  runner.py
ce_benchmark/metrics/: __init__.py  aesthetic.py  clip_score.py  fid.py  lpips.py  nudenet.py  q16.py
metric/: eval.sh  eval_aes.py  eval_clip_score.py  eval_fid.py  eval_lpips.py  fid.sh
